--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gulp-sourcemaps": "^2.0.0-alpha",
     "gulp-tmod": "^2.0.3",
     "gulp-uglify": "^1.5.3",
+    "gulp-watch": "^4.3.8",
     "pipeline-minify-js": "^1.0.1",
     "tmod": "0.0.1"
   }
