--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
+    "gulp-jshint": "^2.0.1",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
     "gulp-sass": "^2.2.0",
@@ -29,6 +30,7 @@
     "gulp-tmod": "^2.0.3",
     "gulp-uglify": "^1.5.3",
     "gulp-watch": "^4.3.8",
+    "jshint": "^2.9.2",
     "pipeline-minify-js": "^1.0.1",
     "tmod": "0.0.1"
   }
